# py175

./: decorators.py  echo_server.py  regex_test.py  roll_dice.py  stateful_dice_roll.py
book_viewer_starter/: app.py
book_viewer_starter/templates/: chapter.html  home.html  layout.html  search.html
cms/: app.py  pyproject.toml
cms/cms/: users.yml  utils.py
cms/cms/data/: about.md
cms/static/stylesheets/: app.css
cms/templates/: edit.html  index.html  layout.html  markdown.html  new.html  signin.html
cms/tests/: test_app.py  users.yml
example_app/: app.py  pyproject.toml
example_app/tests/: test_app.py
todos/todos/: app.py
todos/todos/static/javascripts/: application.js
todos/todos/templates/: edit_list.html  layout.html  list.html  new_list.html
todos/todos/todos/: utils.py
users_and_interests/: app.py  pyproject.toml  users.yaml
users_and_interests/templates/: layout.html  user.html  users.html
